--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 var player;
 function onYouTubeIframeAPIReady() {
   player = new YT.Player('player', {
-    videoId: 'VIDEO_ID_HERE',
+    videoId: 'itdpuGHAcpg',
     events: {
       'onReady': onPlayerReady
     }
